(module01/enroll-form) fix layout input shift

--- a/01_web_fundamentals/html_css/enroll-form/styles/fields/droparea.css
+++ b/01_web_fundamentals/html_css/enroll-form/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.25rem;
 
   display: grid;
@@ -24,7 +25,7 @@
   }
 
   &:hover, &:has(input:focus) {
-    border-width: 2px;
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
 
